# netease_music_lyric_downloder_rs

./: .gitignore  Cargo.toml  README.md  build.rs
src/: cli.rs  fetch.rs  lib.rs  main.rs
