[package]
name = "nml"
authors = ["sakunia <sakunia@foxmail.com>"]
description = "网易云音乐Lyric歌词下载器"
version = "0.1.3"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.26", features = ["derive"] }
console = "0.15.2"
dialoguer = "0.10.2"
json = "0.12.4"
once_cell = "1.16.0"
reqwest = { version = "0.11.13", features = ["json"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
tokio = { version = "1.21.2", features = ["rt-multi-thread", "macros"] }

[build-dependencies]
clap = { version = "4.0.26", features = ["derive"] }
clap_complete = "4.0.5"
